# balamut

./: Cargo.toml  http_client.http
data/: balamut.sqlitedb  blank.sqlitedb
pages/home/: home.html  script_home.js  style_home.css
pages/login/: login.html  script_login.js
pages/player_info/: player_info.html  script_player_info.js  style_player_info.css
pages/player_login/: player_login.html  script_player_login.js
pages/player_register/: player_register.html  script_player_register.js
pages/player_update/: player_update.html  script_player_update.js  style_player_update.css
src/: filters.rs  handlers.rs  lib.rs  main.rs  models.rs
tests/: tests.rs
