[package]
name = "balamut"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = "1.4.1"
pretty_env_logger = "0.5.0"
serde = "1.0.210"
serde_derive = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
warp = "0.3.7"
rusqlite = { version = "0.32.0", features = ["bundled"] }
http = "1.1.0"
rand = "0.8.5"
